04-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: liferay-elasticsearch
  namespace: liferay
spec:
  clusterIP: None
  selector:
    app: liferay-elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: liferay-elasticsearch
  namespace: liferay
spec:
  serviceName: liferay-elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: liferay-elasticsearch
  template:
    metadata:
      labels:
        app: liferay-elasticsearch
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: elasticsearch
          image: ghcr.io/elerum-tecnologia/elerum-elasticsearch:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport

          volumeMounts:
            - name: elasticsearch-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
            - name: elasticsearch-data
              mountPath: /usr/share/elasticsearch/data

          resources:
            requests:
              cpu: "500m"
              memory: "4Gi"
            limits:
              cpu: "2"
              memory: "4Gi"

          readinessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 90
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30

          livenessProbe:
            httpGet:
              path: /
              port: 9200
            initialDelaySeconds: 240
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

      volumes:
        - name: elasticsearch-config
          configMap:
            name: elasticsearch-config

  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: local-path
        resources:
          requests:
            storage: 25Gi
