05-liferay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liferay
  namespace: liferay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liferay
  template:
    metadata:
      labels:
        app: liferay
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: liferay
          image: elupianhez/lug-liferay:2026.q2.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 300
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          volumeMounts:
            - name: liferay-data
              mountPath: /opt/liferay/data
            - name: deploy-dir
              mountPath: /opt/liferay/deploy
            - name: portal-ext
              mountPath: /opt/liferay/portal-ext.properties
              subPath: portal-ext.properties
          resources:
            requests:
              cpu: "500m"
              memory: "4Gi"
            limits:
              cpu: "2"
              memory: "6Gi"

      volumes:
        - name: liferay-data
          persistentVolumeClaim:
            claimName: liferay-data
        - name: liferay-license
          configMap:
            name: liferay-license
        - name: deploy-dir
          emptyDir: {}
        - name: portal-ext
          configMap:
            name: liferay-portal-ext
---
apiVersion: v1
kind: Service
metadata:
  name: liferay
  namespace: liferay
spec:
  selector:
    app: liferay
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 8080
      targetPort: 8080
