07-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: liferay-default-deny-ingress
  namespace: liferay
spec:
  podSelector: {}
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: liferay-allow-nginx-external
  namespace: liferay
spec:
  podSelector:
    matchLabels:
      app: liferay-nginx
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-to-liferay
  namespace: liferay
spec:
  podSelector:
    matchLabels:
      app: liferay
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: liferay-nginx
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-liferay-to-postgres
  namespace: liferay
spec:
  podSelector:
    matchLabels:
      app: liferay-database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: liferay
        - podSelector:
            matchLabels:
              app: liferay-backup
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-liferay-to-elasticsearch
  namespace: liferay
spec:
  podSelector:
    matchLabels:
      app: liferay-elasticsearch
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: liferay
      ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 9300
  policyTypes:
    - Ingress
